Add image versions with OpenJDK 9 and 10 for Ubuntu 18.04 and Windows